--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-6">
-							<div class="home_left_img">
+							<div class="home_left_img" id="home_left_img">
 								<img src="img/banner/home-left.png" alt="">
 							</div>
+							
 						</div>
 						<div class="col-lg-6">
 							<div class="banner_content">
+								<img src="img/banner/home-left.png" alt="" id="left-bck" style="display: none;">
 								<h5>This is me</h5>
 								<h2>Iruoghene Orojeh</h2>
 								<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
