--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,7 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
-								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li> 
-								<li class="nav-item"><a class="nav-link" href="index.html#about">About</a></li> 
-								<li class="nav-item"><a class="nav-link" href="services.html">Services</a>
-								
+								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li> 		
 								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 							</ul>
 						</div> 
@@ -120,7 +117,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12 text-right">
-                                <button type="submit" value="submit" id ="submit" class="btn submit_btn">Send Message</button>
+                                <button type="submit" value="submit" id ="submit" class="btn submit_btn">Book Appointment</button>
                             </div>
                         </form>
                     </div>
